# depper

./: Cargo.toml  README.md
src/: lib.rs
src/snapshots/: depper__tests__can_divide_into_tranches.snap  depper__tests__can_update_dependecies_later.snap
