[package]
name = "depper"
description = "Library for basic dependency validation"
repository = "https://github.com/ebakoba/depper"
documentation = "https://docs.rs/depper"
readme = "README.md"
version = "0.3.0"
authors = ["Kaarel Allemann <kaarelallemann@gmail.com>"]
edition = "2021"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = ["dependencies", "graphs", "validation"]
categories = ["algorithms"]

[dependencies]
anyhow = "1"
insta = "1"
petgraph = "0.6"
